@@ -18,13 +18,12 @@
  */
 package co.elastic.apm.agent.dubbo.advice;
 
-import co.elastic.apm.agent.bci.HelperClassManager;
-import co.elastic.apm.agent.bci.VisibleForAdvice;
-import co.elastic.apm.agent.dubbo.helper.ApacheDubboAttachmentHelper;
-import co.elastic.apm.agent.dubbo.helper.AsyncCallbackCreator;
+import co.elastic.apm.agent.dubbo.helper.ApacheDubboTextMapPropagator;
 import co.elastic.apm.agent.dubbo.helper.DubboTraceHelper;
 import co.elastic.apm.agent.impl.ElasticApmTracer;
+import co.elastic.apm.agent.impl.GlobalTracer;
 import co.elastic.apm.agent.impl.transaction.AbstractSpan;
+import co.elastic.apm.agent.impl.transaction.Outcome;
 import co.elastic.apm.agent.impl.transaction.Span;
 import co.elastic.apm.agent.impl.transaction.Transaction;
 import net.bytebuddy.asm.Advice;
@@ -34,80 +33,81 @@ import org.apache.dubbo.rpc.Result;
 import org.apache.dubbo.rpc.RpcContext;
 
 import javax.annotation.Nullable;
+import java.util.function.BiConsumer;
 
-@VisibleForAdvice
 public class ApacheMonitorFilterAdvice {
 
+    private static final ElasticApmTracer tracer = GlobalTracer.requireTracerImpl();
+
     @Nullable
-    @VisibleForAdvice
-    public static ElasticApmTracer tracer;
-
-    @VisibleForAdvice
-    public static HelperClassManager<ApacheDubboAttachmentHelper> attachmentHelperClassManager;
-
-    @VisibleForAdvice
-    public static HelperClassManager<AsyncCallbackCreator> asyncCallbackCreatorClassManager;
-
-    public static void init(ElasticApmTracer tracer) {
-        ApacheMonitorFilterAdvice.tracer = tracer;
-        attachmentHelperClassManager = HelperClassManager.ForAnyClassLoader.of(tracer,
-            "co.elastic.apm.agent.dubbo.helper.ApacheDubboAttachmentHelperImpl");
-        asyncCallbackCreatorClassManager = HelperClassManager.ForAnyClassLoader.of(tracer,
-            "co.elastic.apm.agent.dubbo.helper.AsyncCallbackCreatorImpl",
-            "co.elastic.apm.agent.dubbo.helper.AsyncCallbackCreatorImpl$AsyncCallback");
-    }
-
-    @Advice.OnMethodEnter(suppress = Throwable.class)
-    public static void onEnterFilterInvoke(@Advice.Argument(1) Invocation invocation,
-                                           @Advice.Local("span") Span span,
-                                           @Advice.Local("transaction") Transaction transaction) {
+    @Advice.OnMethodEnter(suppress = Throwable.class, inline = false)
+    public static Object onEnterFilterInvoke(@Advice.Argument(1) Invocation invocation) {
         RpcContext context = RpcContext.getContext();
-        ApacheDubboAttachmentHelper helper = attachmentHelperClassManager.getForClassLoaderOfClass(Invocation.class);
-        if (helper == null || tracer == null) {
-            return;
-        }
         AbstractSpan<?> active = tracer.getActive();
         // for consumer side, just create span, more information will be collected in provider side
         if (context.isConsumerSide() && active != null) {
-            span = DubboTraceHelper.createConsumerSpan(tracer, invocation.getInvoker().getInterface(),
+            Span span = DubboTraceHelper.createConsumerSpan(tracer, invocation.getInvoker().getInterface(),
                 invocation.getMethodName(), context.getRemoteAddress());
             if (span != null) {
-                span.propagateTraceContext(invocation, helper);
+                span.propagateTraceContext(invocation, ApacheDubboTextMapPropagator.INSTANCE);
+                return span;
             }
         } else if (active == null) {
             // for provider side
-            transaction = tracer.startChildTransaction(invocation, helper, Invocation.class.getClassLoader());
+            Transaction transaction = tracer.startChildTransaction(invocation, ApacheDubboTextMapPropagator.INSTANCE, Invocation.class.getClassLoader());
             if (transaction != null) {
                 transaction.activate();
                 DubboTraceHelper.fillTransaction(transaction, invocation.getInvoker().getInterface(), invocation.getMethodName());
+                return transaction;
             }
         }
+        return null;
     }
 
-    @Advice.OnMethodExit(suppress = Throwable.class, onThrowable = Throwable.class)
+    @Advice.OnMethodExit(suppress = Throwable.class, onThrowable = Throwable.class, inline = false)
     public static void onExitFilterInvoke(@Advice.Argument(1) Invocation invocation,
                                           @Advice.Return @Nullable Result result,
-                                          @Advice.Local("span") @Nullable final Span span,
-                                          @Advice.Thrown @Nullable Throwable t,
-                                          @Advice.Local("transaction") @Nullable Transaction transaction) {
+                                          @Advice.Enter @Nullable final Object spanObj,
+                                          @Advice.Thrown @Nullable Throwable t) {
 
+        AbstractSpan<?> span = (AbstractSpan<?>) spanObj;
         RpcContext context = RpcContext.getContext();
-        AbstractSpan<?> actualSpan = span != null ? span : transaction;
-        if (actualSpan == null) {
+        if (span == null) {
             return;
         }
 
-        actualSpan.deactivate();
+        span.deactivate();
         if (result instanceof AsyncRpcResult) {
-            AsyncCallbackCreator callbackCreator = asyncCallbackCreatorClassManager.getForClassLoaderOfClass(Result.class);
-            if (callbackCreator == null) {
-                actualSpan.end();
-                return;
-            }
-            context.set(DubboTraceHelper.SPAN_KEY, actualSpan);
-            result.whenCompleteWithContext(callbackCreator.create(actualSpan));
+            context.set(DubboTraceHelper.SPAN_KEY, span);
+            result.whenCompleteWithContext(AsyncCallback.INSTANCE);
         } else {
-            actualSpan.end();
+            span.end();
+        }
+    }
+
+    public static class AsyncCallback implements BiConsumer<Result, Throwable> {
+
+        private final static BiConsumer<Result, Throwable> INSTANCE = new AsyncCallback();
+
+        @Override
+        public void accept(@Nullable Result result, @Nullable Throwable t) {
+            AbstractSpan<?> span = (AbstractSpan<?>) RpcContext.getContext().get(DubboTraceHelper.SPAN_KEY);
+            if (span != null) {
+                try {
+                    RpcContext.getContext().remove(DubboTraceHelper.SPAN_KEY);
+
+                    Throwable resultException = null;
+                    if (result != null) {
+                        resultException = result.getException();
+                    }
+
+                    span.captureException(t)
+                        .captureException(resultException)
+                        .withOutcome(t != null || resultException != null ? Outcome.FAILURE : Outcome.SUCCESS);
+                } finally {
+                    span.end();
+                }
+            }
         }
     }
 }
